--- a/main.css
+++ b/main.css
@@ -41,10 +41,10 @@
     font-size: 30px;
     font-weight: bold;
     margin-top: 5px;
+    transition: color 1.15s ease;
 }
 
-.close:hover,
-.close:focus {
+.close:hover {
     color: black;
     cursor: pointer;
 }
